tests/invalid/foreign_type_visibility.err_exp
foreign_type_visibility.m:013: Error: pragma foreign_type
foreign_type_visibility.m:013:   `foreign_type_visibility.foreign'/0 must have
foreign_type_visibility.m:013:   the same visibility as the type declaration.
foreign_type_visibility.m:024: In definition of type
foreign_type_visibility.m:024:   `foreign_type_visibility.foreign2'/0:
foreign_type_visibility.m:024:   error: all definitions of a type must have the
foreign_type_visibility.m:024:   same visibility
foreign_type_visibility.m:026: In definition of type
foreign_type_visibility.m:026:   `foreign_type_visibility.foreign3'/0:
foreign_type_visibility.m:026:   error: all definitions of a type must have the
foreign_type_visibility.m:026:   same visibility
